docs: Update project documentation and improve test files
- Rename current_status.md to next_step.md and update content
- Create code_map.md with overview of project structure and file purposes
- Update completed_tasks.md with latest accomplishments
- Refactor and improve test files:
  - Add docstrings and improve comments in test_game_interface.py
  - Enhance test cases in test_knowledge_graph_parser.py
  - Update and clarify tests in test_resource_manager.py
- Ensure all test files follow project conventions and PEP 8 guidelines

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "A game about crafting and graph theory"
 authors = ["Sam Biggins <sambiggins@gmail.com>"]
 readme = "README.md"
-package-mode = true
+package-mode = false
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
