Improve graph visualization with Plotly and add error handling
- Implement new display_graph_plotly.py using Plotly for interactive visualization
- Add edge labels directly on the graph for better readability
- Implement color coding for different node types with a legend
- Add comprehensive error handling and logging
- Adjust layout and styling for improved graph clarity
- Keep existing matplotlib and pygraphviz implementations for comparison

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,11 @@ python = ">=3.10,<3.13"
 python-dotenv = "^1.0.1"
 networkx = "^3.3"
 matplotlib = "^3.9.2"
+pygraphviz = "^1.13"
+python-igraph = "^0.11.6"
+cairocffi = "^1.7.1"
+igraph = "^0.11.6"
+plotly = "^5.24.0"
 
 
 [tool.poetry.group.dev.dependencies]
