--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Project
+outputs/
+
 # Python
 __pycache__/
 *.py[cod]
@@ -19,6 +22,7 @@ site/
 
 # Logs
 *.log
+logs/
 
 # OS generated files
 .DS_Store
