--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ python-igraph = "^0.11.6"
 cairocffi = "^1.7.1"
 igraph = "^0.11.6"
 plotly = "^5.24.0"
+graphviz = "^0.20.3"
 
 
 [tool.poetry.group.dev.dependencies]
