--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,9 @@ extend-select = ["B950"]
 extend-ignore = ["E203", "E266", "E501", "E701", "W503"]
 plugins = ["flake8-pytest-style"]
 
+[tool.isort]
+profile = "black"
+
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
 python-dotenv = "^1.0.1"
@@ -38,6 +41,7 @@ plotly = "^5.24.0"
 graphviz = "^0.20.3"
 black = {extras = ["d"], version = "^24.8.0"}
 flake8-bugbear = "^24.8.19"
+isort = "^5.13.2"
 
 
 [tool.poetry.group.dev.dependencies]
