--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ tests = "pytest"
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 pythonpath = ["src"]
+addopts = "--cov=src --cov-report=term-missing --cov-report=html"
 
 [tool.black]
 line-length = 88
@@ -51,6 +52,7 @@ mkdocs-material = "^9.5.33"
 pytest = "^8.3.2"
 flake8-pytest-style = "^2.0.0"
 black = "^24.8.0"
+pytest-cov = "^5.0.0"
 
 
 [build-system]
