--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ pytest = "^8.3.2"
 flake8-pytest-style = "^2.0.0"
 black = "^24.8.0"
 pytest-cov = "^5.0.0"
+pytest-mock = "^3.14.0"
 
 
 [build-system]
